Added new patterns: Attract (Gravity), Wave, & Bounce. Added a randomly present predator to the flock (50/50 chance when switched to). Now hiding clock settings menu items if RTC is not available. Fixed strange behavior and crashes when clicking left/right buttons in settings menu. Refactored Menu, fixed foreground changes not being shown until after current drawable delay finished.  Noticeable when showing/hiding clock, changing play mode, etc on patterns and animations with long delays. Removed unneeded menu drawing code. Updated pre-compiled binary Aurora.hex file.

--- a/Aurora.vcxproj
+++ b/Aurora.vcxproj
@@ -79,6 +79,7 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Attractor.h" />
     <ClInclude Include="Bitmaps.h" />
     <ClInclude Include="Boid.h" />
     <ClInclude Include="ClockDigitalShort.h" />
@@ -91,6 +92,8 @@
     <ClInclude Include="IrCodes.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuItem.h" />
+    <ClInclude Include="PatternAttract.h" />
+    <ClInclude Include="PatternBounce.h" />
     <ClInclude Include="PatternEffects.h">
       <FileType>CppCode</FileType>
     </ClInclude>
@@ -128,6 +131,7 @@
     <ClInclude Include="PatternSpiral.h">
       <FileType>CppCode</FileType>
     </ClInclude>
+    <ClInclude Include="PatternWave.h" />
     <ClInclude Include="Playlist.h" />
     <ClInclude Include="Runnable.h">
       <FileType>CppCode</FileType>
