Moved streaming mode (TPM2) to a top-level menu item instead of a pattern.

--- a/Aurora.vcxproj
+++ b/Aurora.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="SettingsSetTime.h">
       <FileType>CppCode</FileType>
     </ClInclude>
+    <ClInclude Include="StreamingMode.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Visual Micro\.Aurora-mf-release.vsarduino.h" />
   </ItemGroup>
