--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.DS_Store
+spec.d
+.ino.cpp
+Release
+Arduino
 Debug
 Visual Micro
 *.suo
@@ -5,3 +10,4 @@ Visual Micro
 *.opensdf
 *.vcxproj.filters
 *.vcxproj.user
+/Release/
